--- a/15/index.html
+++ b/15/index.html
@@ -14,16 +14,25 @@
         height: 100%;
         margin: 0;
       }
-      section {
-        height: 800px
+      .main {
+        width: 100vw !important;
+        height: auto !important;
+        position: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        margin: 0;
+      }
+
+      .section {
+        height: 100vh !important;
+        width: 100% !important;
       }
 
     </style>
   </head>
   <body>
-    <section>hey</section>
-    <section></section>
-    <section></section>
     <script src="src/index.js"></script>
   </body>
 </html>
